--- a/apps/web/src/app/billing/settings/tax-info.component.html
+++ b/apps/web/src/app/billing/settings/tax-info.component.html
@@ -279,7 +279,10 @@
       />
     </div>
   </div>
-  <div class="col-6" *ngIf="organizationId && taxInfo.country !== 'US'">
+  <div
+    class="col-6"
+    *ngIf="organizationId && taxInfo.country !== 'US' && showAdditionalTaxOptions(taxInfo.country)"
+  >
     <div class="form-group form-check">
       <input
         class="form-check-input"
@@ -292,7 +295,10 @@
     </div>
   </div>
 </div>
-<div class="row" *ngIf="organizationId && taxInfo.includeTaxId">
+<div
+  class="row"
+  *ngIf="organizationId && taxInfo.includeTaxId && showAdditionalTaxOptions(taxInfo.country)"
+>
   <div class="col-6">
     <div class="form-group">
       <label for="taxId">{{ "taxIdNumber" | i18n }}</label>
@@ -300,7 +306,10 @@
     </div>
   </div>
 </div>
-<div class="row" *ngIf="organizationId && taxInfo.includeTaxId">
+<div
+  class="row"
+  *ngIf="organizationId && taxInfo.includeTaxId && showAdditionalTaxOptions(taxInfo.country)"
+>
   <div class="col-6">
     <div class="form-group">
       <label for="addressLine1">{{ "address1" | i18n }}</label>
